--- a/config/dks.conf
+++ b/config/dks.conf
@@ -5,3 +5,6 @@
 # Uncomment the following line to enable the dks OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
