--- a/config/dks.conf
+++ b/config/dks.conf
@@ -3,8 +3,12 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the dks OLED Display
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_PM_SOFT_OFF=y
